--- a/.github/workflows/samples-java-client-echo-api-jdk11.yaml
+++ b/.github/workflows/samples-java-client-echo-api-jdk11.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-node@v3
       - name: Run echo server
         run: |
-          git clone https://wing328/http-echo-server -b openapi-generator-test-server
+          git clone https://github.com/wing328/http-echo-server -b openapi-generator-test-server
           (cd http-echo-server && npm start &)
       - name: Build
         working-directory: ${{ matrix.sample }}
