add tests to cover baseName (deep object) change

--- a/modules/openapi-generator/src/test/resources/3_0/deepobject.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/deepobject.yaml
@@ -12,7 +12,7 @@ paths:
           required: false
           style: deepObject
           schema:
-            $ref: '#/components/schemas/Options'
+            $ref: '#/components/schemas/Pet'
           explode: true
         - name: inputOptions
           in: query
@@ -36,7 +36,7 @@ paths:
           required: false
           style: form
           schema:
-            $ref: '#/components/schemas/Options'
+            $ref: '#/components/schemas/Pet'
           explode: true
       responses:
         '200':
