--- a/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
@@ -136,3 +136,36 @@ components:
             - sold
       xml:
         name: pet
+    DefaultValue:
+      type: object
+      description: to test the default value of properties
+      properties:
+        array_string_enum_default:
+          type: array
+          items:
+            type: string
+            enum:
+            - success
+            - failure
+          default:
+            - success
+            - failure
+        array_string_default:
+          type: array
+          items:
+            type: string
+          default:
+            - failure
+            - skipped
+        array_string:
+          type: array
+          items:
+            type: string
+        array_string_nullable:
+          nullable: true
+          type: array
+          items:
+            type: string
+        string_nullable:
+          nullable: true
+          type: string
