--- a/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
@@ -147,6 +147,7 @@ components:
             enum:
             - success
             - failure
+            - unclassified
           default:
             - success
             - failure
@@ -157,6 +158,13 @@ components:
           default:
             - failure
             - skipped
+        array_integer_default:
+          type: array
+          items:
+            type: integer 
+          default:
+            - 1 
+            - 3
         array_string:
           type: array
           items:
