--- a/modules/openapi-generator/src/test/resources/3_0/go/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/go/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -2051,3 +2051,11 @@ components:
       - type: string
       - format: date-time
         type: string
+    AllOfPrimitiveTypes:
+      allOf:
+      - type: object
+        properties: 
+          test: 
+            type: string
+            format: date-time
+          
