--- a/.github/workflows/samples-java-client-echo-api-jdk11.yaml
+++ b/.github/workflows/samples-java-client-echo-api-jdk11.yaml
@@ -17,6 +17,7 @@ jobs:
         sample:
           # clients
           - samples/client/echo_api/java/native
+          - samples/client/echo_api/java/apache-httpclient
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
