--- a/.travis.yml
+++ b/.travis.yml
@@ -158,28 +158,36 @@ after_success:
         echo "Publishing from branch $TRAVIS_BRANCH";
         mvn clean deploy -DskipTests=true -B -U -P release --settings CI/settings.xml;
         echo "Finished mvn clean deploy for $TRAVIS_BRANCH";
-        pushd .;
-        cd modules/openapi-generator-gradle-plugin;
-        ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" -PossrhUsername="${SONATYPE_USERNAME}" -PossrhPassword="${SONATYPE_PASSWORD}" publishPluginMavenPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository;
+        ./gradlew \
+          :openapi-generator-gradle-plugin:publishPluginMavenPublicationToSonatypeRepository \
+          closeAndReleaseSonatypeStagingRepository \
+          -Psigning.keyId="$SIGNING_KEY" \
+          -Psigning.password="$SIGNING_PASSPHRASE" \
+          -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" \
+          -PossrhUsername="${SONATYPE_USERNAME}" \
+          -PossrhPassword="${SONATYPE_PASSWORD}";
         echo "Finished ./gradlew publishPluginMavenPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository";
-        popd;
       elif [ -z $TRAVIS_TAG ] && [[ "$TRAVIS_BRANCH" =~ ^[0-9]+\.[0-9]+\.x$ ]]; then
         echo "Publishing from branch $TRAVIS_BRANCH";
         mvn clean deploy --settings CI/settings.xml;
         echo "Finished mvn clean deploy for $TRAVIS_BRANCH";
-        pushd .;
-        cd modules/openapi-generator-gradle-plugin;
-        ./gradlew -PossrhUsername="${SONATYPE_USERNAME}" -PossrhPassword="${SONATYPE_PASSWORD}" publishPluginMavenPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository;
+        ./gradlew \
+          :openapi-generator-gradle-plugin:publishPluginMavenPublicationToSonatypeRepository \
+          closeAndReleaseSonatypeStagingRepository \
+          -PossrhUsername="${SONATYPE_USERNAME}" \
+          -PossrhPassword="${SONATYPE_PASSWORD}";
         echo "Finished ./gradlew publishPluginMavenPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository";
-        popd;
       fi;
       if [ -n $TRAVIS_TAG ] && [[ "$TRAVIS_TAG" =~ ^[v][0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-        echo "Publishing the gradle plugin to Gradle Portal on tag $TRAVIS_TAG (only)";
-        pushd .;
-        cd modules/openapi-generator-gradle-plugin;
-        ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" publishPlugins -Dgradle.publish.key=$GRADLE_PUBLISH_KEY -Dgradle.publish.secret=$GRADLE_PUBLISH_SECRET;
+        echo "Publishing the Gradle plugin to the Gradle Plugin Portal on tag $TRAVIS_TAG (only)";
+        ./gradlew \
+          :openapi-generator-gradle-plugin:publishPlugins \
+          -Psigning.keyId="$SIGNING_KEY" \
+          -Psigning.password="$SIGNING_PASSPHRASE" \
+          -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" \
+          -Dgradle.publish.key=$GRADLE_PUBLISH_KEY \
+          -Dgradle.publish.secret=$GRADLE_PUBLISH_SECRET;
         echo "Finished ./gradlew publishPlugins (plugin portal)";
-        popd;
       fi;
     fi;
   ## docker: build and push openapi-generator-online to DockerHub
