--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,6 @@ samples/openapi3/client/petstore/go/privatekey.pem
 
 ## OCaml
 samples/client/petstore/ocaml/_build/
+
+# To have everything in the ide, while developing
+/dev-try-it-out/
