--- a/.github/workflows/samples-java-client-echo-api-jdk11.yaml
+++ b/.github/workflows/samples-java-client-echo-api-jdk11.yaml
@@ -19,6 +19,7 @@ jobs:
           - samples/client/echo_api/java/apache-httpclient
           - samples/client/echo_api/java/native
           - samples/client/echo_api/java/feign-gson
+          - samples/client/echo_api/java/resttemplate
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
