--- a/.github/workflows/check-supported-versions.yaml
+++ b/.github/workflows/check-supported-versions.yaml
@@ -91,5 +91,5 @@ jobs:
           git config --global core.safecrlf false
           git config --global core.autocrlf true
           mvn clean package -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
-          # test with java (jersey2) client generation only as ensure-uptodate script is run in another job instead
-          ./bin/generate-samples.sh ./bin/configs/java-jersey2-8.yaml
+          # test with java (jersey2) client generation only as ensure-up-to-date script is run in another job instead
+          ./bin/generate-samples.sh ./bin/configs/java-jersey2-8.yaml --global-property debugSupportingFiles
