--- a/.github/workflows/samples-java-client-jdk17.yaml
+++ b/.github/workflows/samples-java-client-jdk17.yaml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - samples/client/petstore/java/resttemplate-jakarta/**
+      - samples/client/petstore/java/webclient-jakarta/**
   pull_request:
     paths:
       - samples/client/petstore/java/resttemplate-jakarta/**
+      - samples/client/petstore/java/webclient-jakarta/**
 jobs:
   build:
     name: Build Java Client JDK17
@@ -17,6 +19,7 @@ jobs:
         sample:
           # clients
           - samples/client/petstore/java/resttemplate-jakarta
+          - samples/client/petstore/java/webclient-jakarta
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
