--- a/modules/openapi-generator/src/test/resources/3_0/csharp/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/csharp/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -2179,3 +2179,14 @@ components:
           type: string
         prop2:
           type: object
+    StringOrEnumString:
+      anyOf:
+        - $ref: '#/components/schemas/RefToString'
+        - $ref: '#/components/schemas/RefToEnumString'
+    RefToString:
+      type: string
+    RefToEnumString:
+      type: string
+      enum:
+        - a
+        - b
