add test for allOf in query parameter

--- a/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/echo_api.yaml
@@ -158,6 +158,29 @@ paths:
             text/plain:
               schema:
                 type: string
+  /query/style_deepObject/explode_true/object/allOf:
+    get:
+      tags:
+        - query
+      summary: Test query parameter(s)
+      description: Test query parameter(s)
+      operationId: test/query/style_deepObject/explode_true/object/allOf
+      parameters:
+      - in: query
+        name: query_object
+        style: deepObject
+        explode: true #default
+        schema:
+          allOf:
+          - $ref: '#/components/schemas/Category'
+          - $ref: '#/components/schemas/Bird'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            text/plain:
+              schema:
+                type: string
   /echo/body/Pet:
     post:
       tags:
@@ -244,3 +267,10 @@ components:
             - sold
       xml:
         name: pet
+    Bird:
+      type: object
+      properties:
+        size:
+          type: string
+        color:
+          type: string
