--- a/pom.xml
+++ b/pom.xml
@@ -1152,7 +1152,8 @@
             <modules>
                 <!-- comment out as newer version of qt needed in travis
                 <module>samples/client/petstore/cpp-qt</module>-->
-                <module>samples/client/petstore/php/OpenAPIClient-php</module>
+                <!--
+                <module>samples/client/petstore/php/OpenAPIClient-php</module>-->:
                 <!-- TODO: move to github action or circleci
                 <module>samples/client/petstore/crystal</module>-->
                 <!-- TODO: will move these to Github action
