Add phplint package

--- a/samples/client/petstore/php-nextgen/OpenAPIClient-php/composer.json
+++ b/samples/client/petstore/php-nextgen/OpenAPIClient-php/composer.json
@@ -26,13 +26,20 @@
         "guzzlehttp/psr7": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^3.5"
+        "friendsofphp/php-cs-fixer": "^3.5",
+        "overtrue/phplint": "^9.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": { "OpenAPI\\Client\\" : "lib/" }
     },
     "autoload-dev": {
         "psr-4": { "OpenAPI\\Client\\Test\\" : "test/" }
+    },
+    "scripts": {
+        "test": [
+            "@phplint"
+        ],
+        "phplint": "phplint"
     }
 }
