--- a/samples/client/petstore/cpp-qt/CMakeLists.txt
+++ b/samples/client/petstore/cpp-qt/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 
 project(cpp-qt5-petstore)
+set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
 
 add_subdirectory(client)
 
