--- a/.travis.yml
+++ b/.travis.yml
@@ -150,7 +150,7 @@ script:
   - docker buildx version
   # run integration tests defined in maven pom.xml
   # WARN: Travis will timeout after 10 minutes of no stdout/stderr activity, which is problematic with mvn --quiet.
-  - mvn -e --no-snapshot-updates --quiet --batch-mode --show-version clean install -Dorg.slf4j.simpleLogger.defaultLogLevel=error
+  #- mvn -e --no-snapshot-updates --quiet --batch-mode --show-version clean install -Dorg.slf4j.simpleLogger.defaultLogLevel=error
   #- mvn -e --no-snapshot-updates --quiet --batch-mode --show-version verify -Psamples -Dorg.slf4j.simpleLogger.defaultLogLevel=error
 after_success:
   # push to maven repo
@@ -215,15 +215,13 @@ after_success:
           echo "Pushed to $DOCKER_CODEGEN_CLI_IMAGE_NAME";
       fi;
     fi;
-  ## publish latest website, variables below are secure environment variables which are unavailable to PRs from forks.
-  #- if [ "$TRAVIS_BRANCH" = "master" ] && [ -z $TRAVIS_TAG ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-  #    cd website;
-  #    git config --global user.name "${GH_NAME}";
-  #    git config --global user.email "${GH_EMAIL}";
-  #    echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc;
-  #    yarn install;
-  #    GIT_USER="${GH_NAME}" yarn run publish-gh-pages;
-  #  fi;
+  # publish latest website, variables below are secure environment variables which are unavailable to PRs from forks.
+  - cd website;
+    git config --global user.name "${GH_NAME}";
+    git config --global user.email "${GH_EMAIL}";
+    echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc;
+    yarn install;
+    GIT_USER="${GH_NAME}" yarn run publish-gh-pages;
 
 env:
   - DOCKER_GENERATOR_IMAGE_NAME=openapitools/openapi-generator-online DOCKER_CODEGEN_CLI_IMAGE_NAME=openapitools/openapi-generator-cli NODE_ENV=test CC=gcc-5 CXX=g++-5
