--- a/.github/workflows/samples-python-nextgen-client-echo-api.yaml
+++ b/.github/workflows/samples-python-nextgen-client-echo-api.yaml
@@ -33,4 +33,4 @@ jobs:
         run: pip install -r requirements.txt
       - name: Test
         working-directory: ${{ matrix.sample }}
-        run: pytest
+        run: python -m pytest
