[Java][WebClient] support string list return type

--- a/modules/openapi-generator/src/test/resources/bugs/issue_7118.yaml
+++ b/modules/openapi-generator/src/test/resources/bugs/issue_7118.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: OpenAPI Petstore
-  description: "sample to get all user id as string list"
+  description: "sample to get all user id as string list and string set"
   version: 1.0.0
 tags: []
 paths:
