Add Java example

--- a/modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -1483,11 +1483,14 @@ components:
     Animal:
       type: object
       discriminator:
-        propertyName: className
+        propertyName: type
+        mapping:
+          DOG: '#/components/schemas/Dog'
+          CAT: '#/components/schemas/Cat'
       required:
-        - className
+        - type
       properties:
-        className:
+        type:
           type: string
         color:
           type: string
