--- a/.travis.yml
+++ b/.travis.yml
@@ -154,7 +154,10 @@ script:
   #- mvn -e --no-snapshot-updates --quiet --batch-mode --show-version verify -Psamples -Dorg.slf4j.simpleLogger.defaultLogLevel=error
 after_success:
   # push to maven repo
-  #- if [ $SONATYPE_USERNAME ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+  - export TRAVIS_TAG=v6.4.0
+  - export TRAVIS_BRANCH=master
+  - export TRAVIS_PULL_REQUEST=false
+  - if [ $SONATYPE_USERNAME ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
   #    if [ "$TRAVIS_BRANCH" = "master" ] && [ -z $TRAVIS_TAG ]; then
   #      echo "Publishing from branch $TRAVIS_BRANCH";
   #      mvn clean deploy -DskipTests=true -B -U -P release --settings CI/settings.xml;
@@ -174,19 +177,16 @@ after_success:
   #      echo "Finished ./gradlew publishPluginMavenPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository";
   #      popd;
   #    fi;
-  #    if [ -n $TRAVIS_TAG ] && [[ "$TRAVIS_TAG" =~ ^[v][0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-  #      echo "Publishing the gradle plugin to Gradle Portal on tag $TRAVIS_TAG (only)";
-  #      pushd .;
-  #      cd modules/openapi-generator-gradle-plugin;
-  #      ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" publishPlugins -Dgradle.publish.key=$GRADLE_PUBLISH_KEY -Dgradle.publish.secret=$GRADLE_PUBLISH_SECRET;
-  #      echo "Finished ./gradlew publishPlugins (plugin portal)";
-  #      popd;
-  #    fi;
-  #  fi;
+      if [ -n $TRAVIS_TAG ] && [[ "$TRAVIS_TAG" =~ ^[v][0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+        echo "Publishing the gradle plugin to Gradle Portal on tag $TRAVIS_TAG (only)";
+        pushd .;
+        cd modules/openapi-generator-gradle-plugin;
+        ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="${TRAVIS_BUILD_DIR}/sec.gpg" publishPlugins -Dgradle.publish.key=$GRADLE_PUBLISH_KEY -Dgradle.publish.secret=$GRADLE_PUBLISH_SECRET;
+        echo "Finished ./gradlew publishPlugins (plugin portal)";
+        popd;
+      fi;
+    fi;
   ## docker: build and push openapi-generator-online to DockerHub
-  - export TRAVIS_TAG=v6.4.0
-  - export TRAVIS_BRANCH=master
-  - export TRAVIS_PULL_REQUEST=false
   - if [ $DOCKER_HUB_USERNAME ]; then
       echo "$DOCKER_HUB_PASSWORD" | docker login --username=$DOCKER_HUB_USERNAME --password-stdin;
       export cli_version=$(\mvn -o org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\[');
@@ -218,15 +218,15 @@ after_success:
           echo "Pushed to $DOCKER_CODEGEN_CLI_IMAGE_NAME";
       fi;
     fi;
-  # publish latest website, variables below are secure environment variables which are unavailable to PRs from forks.
-  #- if [ "$TRAVIS_BRANCH" = "master" ] && [ -z $TRAVIS_TAG ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-  #    cd website;
-  #    git config --global user.name "${GH_NAME}";
-  #    git config --global user.email "${GH_EMAIL}";
-  #    echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc;
-  #    yarn install;
-  #    GIT_USER="${GH_NAME}" yarn run publish-gh-pages;
-  #  fi;
+   publish latest website, variables below are secure environment variables which are unavailable to PRs from forks.
+  - if [ "$TRAVIS_BRANCH" = "master" ] && [ -z $TRAVIS_TAG ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+      cd website;
+      git config --global user.name "${GH_NAME}";
+      git config --global user.email "${GH_EMAIL}";
+      echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc;
+      yarn install;
+      GIT_USER="${GH_NAME}" yarn run publish-gh-pages;
+    fi;
 
 env:
   - DOCKER_GENERATOR_IMAGE_NAME=openapitools/openapi-generator-online DOCKER_CODEGEN_CLI_IMAGE_NAME=openapitools/openapi-generator-cli NODE_ENV=test CC=gcc-5 CXX=g++-5
